--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.0.0",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.1.2",
     "turbolinks": "^5.2.0"
   },
