--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "webpack-dev-server": "^3.10.3"
   }
 }
