--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "testPathIgnorePatterns": [
       "/node_modules/",
       "<rootDir>/config/webpack/test.js"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/app/javascript/test/mocks/style_mock.js"
+    }
   }
 }
